# merch-store

./: .gitignore  .pdm-python  Dockerfile  Readme.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
etc/nginx/: nginx.conf
merch_project/: db.sqlite3  manage.py
merch_project/authentication/: backends.py  models.py  renderers.py  serializers.py  urls.py  views.py
merch_project/merch_app/: admin.py  apps.py  models.py
merch_project/merch_project/: asgi.py  settings.py  urls.py  wsgi.py
