[project]
name = "avito"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "richesel-student", email = "rinatdevlieamov@gmail.com"},
]
dependencies = [
    "Django==5.1.2",
    "gunicorn==21.2.0",
    "gevent==23.9.1",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.3.0",
    "django-filter==23.3",
    "django-redis==5.4.0",
    "psycopg2-binary==2.9.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
